fix www folder (#759)